k8s/dns/external-dns-simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.k8s.io/external-dns/external-dns:v0.21.0
        args:
        - --source=service
        - --source=ingress
        - --policy=upsert-only
        - --domain-filter=gcm.6nix.pl
        - --provider=dnsimple
        - --registry=txt
