k8s/dns/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: "35.215.39.218"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "le"
spec:
  ingressClassName: traefik
  rules:
  - host: gcm.6nix.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/target: "35.215.39.218"
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  ingressClassName: traefik
  rules:
  - host: hl.gcm.6nix.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-headlamp
            port:
              number: 80
  - host: headlamp.gce.6nix.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-headlamp
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: portainer
  annotations:
    external-dns.alpha.kubernetes.io/target: "35.215.39.218"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "le"
spec:
  ingressClassName: traefik
  rules:
  - host: pt.gcm.6nix.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer
            port:
              number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: serverpod-ingress
  namespace: stream-server
  annotations:
    external-dns.alpha.kubernetes.io/target: "35.215.39.218"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "le"
spec:
  ingressClassName: traefik
  rules:
  - host: api.sp.gcm.6nix.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stream-server
            port:
              number: 8080  
  - host: api.sp.23d727da.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stream-server
            port:
              number: 8080
  - host: insights.sp.23d727da.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stream-server
            port:
              number: 8081
  - host: insights.sp.23d727da.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stream-server
            port:
              number: 8081
  - host: web.sp.gcm.6nix.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stream-server
            port:
              number: 8082
  - host: web.sp.23d727da.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stream-server
            port:
              number: 8082
